--- a/layouts/global.css
+++ b/layouts/global.css
@@ -77,7 +77,7 @@ html {
 .half-leave-from-class,
 .half-leave-active-class,
 .half-leave-to-class {
-  transition: opacity 2s ease;
+  /*transition: opacity 2s ease;*/
   opacity: 1;
 }
 
@@ -96,20 +96,20 @@ html {
 /* .bounce-leave-active {
   animation: bounce-in 0.5s reverse;
 } */
-@keyframes bounce-in {
+/*@keyframes bounce-in {
   0% {
     transform: scale(1);
-    /* opacity: 0; */
+    !* opacity: 0; *!
   }
   50% {
     transform: scale(1.1);
-    /* opacity: .7; */
+    !* opacity: .7; *!
   }
   100% {
-    /* opacity: 1; */
+    !* opacity: 1; *!
     transform: scale(1);
   }
-}
+}*/
 
 /* @keyframes opacityGroup {
   0% {
@@ -130,7 +130,7 @@ html {
 
 .v-enter-active,
 .v-leave-active {
-  transition: opacity 0.5s ease;
+  /*transition: opacity 0.5s ease;*/
 }
 
 .v-enter-from,
